# TgMiniAppTemplate-bot

./: .env.example  .gitignore  Dockerfile  dockerfile  pyproject.toml  requirements.txt
src/: main.py
src/api/: __init__.py
src/handlers/: __init__.py
src/handlers/callback/: __init__.py  commands.py  miniapp.py
src/handlers/commands/: __init__.py  help.py  miniapp.py  start.py
src/handlers/inline/: __init__.py  base.py
src/handlers/webapp/: __init__.py  hello.py
src/locales/: __init__.py  en.json  ru.json
src/utils/: __init__.py  logging.py  messages.py
